<resources>
    <string name="app_name">CryptoConverter</string>
    <string name="btc_text">  Bitcoin (BTC) Conversion</string>
    <string name="eth_text">  Ethereum (ETH) Conversion</string>
    <string name="eth"> Ethereum </string>
    <string name="btc"> Bitcoin </string>
    <string name="fa_icon_bitcoin">&#xf15a;</string>
    <string name="fa_icon_ethereum">&#xf219;</string>
    <string name="fa_icon_exchange">&#xf0ec;</string>
    <string name="fa_icon_euro">&#xf153;</string>
</resources>
