<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.thekoladeakande.cryptoconverter.menuActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <include
        android:id="@+id/toolbar"
        layout="@layout/mytoolbar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:title="@string/app_name"
        app:titleTextColor="@android:color/white"
        android:text="@string/app_name"/>
    <android.support.v7.widget.CardView
        android:id="@+id/BTC_view"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/btc_ripple"
            android:clickable="true"
            android:onClick="btcClick">
            <ImageView
                android:id="@+id/btc_image"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:scaleType="fitXY"
                app:srcCompat ="@drawable/btc"
                android:onClick="btcClick"
                android:foreground="@drawable/btc_ripple" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/btc_image"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginLeft="10dp"
                        android:textSize="22sp"
                        android:id="@+id/btc_icon"
                        android:text="@string/fa_icon_bitcoin" />

                    <TextView
                android:id="@+id/btc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/btc_text"
                android:textColor="@color/grey_700"
                android:textSize="22sp"
                tools:ignore="RtlSymmetry" />

                </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/ETH_view"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BTC_view"
        app:cardElevation="2dp"
        android:clickable="true"
        android:onClick="eth_click">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:foreground="@drawable/eth_ripple"
            android:onClick="ethClick">



            <ImageView
                android:id="@+id/eth_image"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:onClick="ethClick"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ethereum"
                android:foreground="@drawable/eth_ripple"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/eth_image"
                android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:textSize="22sp"
                android:id="@+id/eth_icon"
                android:text="@string/fa_icon_ethereum" />
            <TextView
                android:id="@+id/eth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/eth_text"
                android:textColor="@color/grey_700"
                android:textSize="22sp" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
</ScrollView>